platform/gaming/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: emulatorjs
  namespace: gaming

spec:
  replicas: 1

  selector:
    matchLabels:
      app: emulatorjs

  template:
    metadata:
      labels:
        app: emulatorjs

    spec:
      containers:
        - name: emulatorjs
          image: lscr.io/linuxserver/emulatorjs:beta

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: config
              mountPath: /config

            - name: data
              mountPath: /data

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: emulatorjs-config

        - name: data
          persistentVolumeClaim:
            claimName: emulatorjs-data
