platform/gaming/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: emulatorjs
  namespace: gaming

spec:
  selector:
    app: emulatorjs

  ports:
    - name: http
      port: 80
      targetPort: 3000
