platform/gaming/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: emulatorjs
  namespace: gaming

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - host: retro.home
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: emulatorjs
                port:
                  number: 80
